--- a/app/components/plate/plate.less
+++ b/app/components/plate/plate.less
@@ -3,6 +3,7 @@
     border: solid 1px;
     border-radius: 5px;
     text-align: center;
+    box-sizing: content-box;
     
     .badge {
         color: white;
